--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -11,9 +11,21 @@ USER civicrm
 
 RUN wp core download
 
-COPY ./wp-config.php /var/www/html
+RUN mkdir /var/www/html/wp-content/uploads
 
-COPY ./civicrm.settings.php /var/www/html
+RUN cd /var/www/html/wp-content/plugins \
+  && curl -L https://download.civicrm.org/civicrm-$CIVICRM_VERSION-wordpress.zip > civicrm-wordpress.zip \
+  && unzip civicrm-wordpress.zip \
+  && rm civicrm-wordpress.zip
+
+RUN cd /var/www/html/wp-content/plugins \
+  && curl -L https://download.civicrm.org/civicrm-$CIVICRM_VERSION-l10n.tar.gz > civicrm-l10n.tar.gz \
+  && tar xzf civicrm-l10n.tar.gz \
+  && rm civicrm-l10n.tar.gz
+
+COPY --chown=civicrm:civicrm ./wp-config.php /var/www/html
+
+COPY --chown=civicrm:civicrm ./civicrm.settings.php /var/www/html
 
 USER root
 
