insert default .htaccess file

--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -27,6 +27,8 @@ COPY --chown=civicrm:civicrm ./wp-config.php /var/www/html
 
 COPY --chown=civicrm:civicrm ./civicrm.settings.php /var/www/html
 
+COPY --chown=civicrm:civicrm ./.htaccess /var/www/html
+
 # Help cv find the civicrm.settings.php file
 ENV CIVICRM_SETTINGS=civicrm.settings.php
 
