--- a/compose-examples/wordpress/docker-compose.yml
+++ b/compose-examples/wordpress/docker-compose.yml
@@ -1,12 +1,1 @@
-version: '3.4'
-services:
-  civicrm:
-    image: civicrm-wordpress
-    hostname: $PROJECT_NAME
-    environment: 
-      - PROJECT_NAME
-      - BASE_URL
-    ports:
-      - 8072:80
-  mysql:
-    image: mysql:5.6
+docker-compose.prod.yml
