--- a/base/php.ini
+++ b/base/php.ini
@@ -1,4 +1,6 @@
 memory_limit = 1024M
 upload_max_filesize = 64M
 post_max_size = 64M
+max_execution_time=300
+max_input_time  = -1
 sendmail_path=/usr/sbin/sendmail -t -i
