add civix to base image for extension development

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -93,6 +93,11 @@ USER root
 RUN curl -LsS https://download.civicrm.org/cv/cv.phar -o /usr/local/bin/cv \
   && chmod +x /usr/local/bin/cv
 
+# Download civix
+
+RUN curl -LsS https://download.civicrm.org/civix/civix.phar -o /usr/local/bin/civix \
+  && chmod +x /usr/local/bin/civix
+
 # Configure apache
 
 RUN a2enmod rewrite headers
