symlink for docker compose

--- a/compose-examples/drupal/docker-compose.yml
+++ b/compose-examples/drupal/docker-compose.yml
@@ -1,35 +1,1 @@
-version: '3.4'
-services:
-  civicrm:
-    image: civicrm-drupal
-    hostname: $PROJECT_NAME
-    environment: 
-      - PROJECT_NAME
-      - BASE_URL
-      - CIVICRM_DB_NAME
-      - CIVICRM_DB_USER
-      - CIVICRM_DB_PASS
-      - CIVICRM_DB_HOST
-      - CIVICRM_DB_PORT
-      - DRUPAL_DB_NAME
-      - DRUPAL_DB_USER
-      - DRUPAL_DB_PASS
-      - DRUPAL_DB_HOST
-      - DRUPAL_DB_PORT
-      - MYSQL_ROOT_PASSWORD
-      # - DEBUG # Should be turned off in production
-    ports:
-      - 2401:80
-    volumes:
-      - ./src:/var/www/html
-      - files:/var/www/html/sites/default/files
-      - ./state:/state
-  mysql:
-    image: civicrm-mysql
-    volumes:
-      - mysql:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD
-volumes:
-  files:
-  mysql:
+docker-compose.dev.yml
