--- a/compose-examples/drupal/docker-compose.dev.yml
+++ b/compose-examples/drupal/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   civicrm:
-    image: civicrm-drupal
+    image: michaelmcandrew/civicrm-drupal
     hostname: $PROJECT_NAME
     environment: 
       - PROJECT_NAME
