add maildev to docker drupal dev site

--- a/compose-examples/drupal/docker-compose.dev.yml
+++ b/compose-examples/drupal/docker-compose.dev.yml
@@ -33,6 +33,11 @@ services:
     volumes:
       - mysql:/var/lib/mysql
     restart: always
+  maildev:
+    image: djfarrelly/maildev
+    restart: always
+    ports:
+     - NNNN:80
 volumes:
   files:
   mysql:
