--- a/compose-examples/wordpress/docker-compose.dev.yml
+++ b/compose-examples/wordpress/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
       - SMTP_MAILDOMAIN
       - DEBUG
     ports:
-      - 2411:80
+      - NNNN:80
     restart: always
     volumes:
       - uploads:/var/www/html/wp-content/uploads 
@@ -39,7 +39,7 @@ services:
     image: djfarrelly/maildev
     restart: always
     ports:
-     - 2412:80
+     - NNNN:80
 volumes:
   mysql:
   uploads:
