--- a/compose-examples/drupal/docker-compose.dev.yml
+++ b/compose-examples/drupal/docker-compose.dev.yml
@@ -17,7 +17,7 @@ services:
       - DRUPAL_DB_HOST
       - DRUPAL_DB_PORT
       - MYSQL_ROOT_PASSWORD
-      # - DEBUG # Should be turned off in production
+      - DEBUG=ON
     ports:
       - NNNN:80
     volumes:
