--- a/compose-examples/drupal/.env
+++ b/compose-examples/drupal/.env
@@ -1,5 +1,5 @@
 PROJECT_NAME=example
-BASE_URL=http://localhost:2401
+BASE_URL=http://localhost:NNNN
 MYSQL_ROOT_PASSWORD=xxx
 
 CIVICRM_DB_NAME=civicrm
