--- a/compose-examples/wordpress/.env
+++ b/compose-examples/wordpress/.env
@@ -1,2 +1,17 @@
 PROJECT_NAME=example
 BASE_URL=http://localhost:NNNN
+MYSQL_ROOT_PASSWORD=xxx
+
+CIVICRM_DB_NAME=civicrm
+CIVICRM_DB_USER=civicrm
+CIVICRM_DB_PASS=xxx
+CIVICRM_DB_HOST=mysql
+CIVICRM_DB_PORT=3306
+
+WORDPRESS_DB_NAME=drupal
+WORDPRESS_DB_USER=drupal
+WORDPRESS_DB_PASS=xxx
+WORDPRESS_DB_HOST=mysql
+WORDPRESS_DB_PORT=3306
+
+CIVICRM_SITE_KEY=xxxxxx
