--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -73,11 +73,12 @@ RUN pecl install imagick \
 RUN pecl install xdebug
 
 # Install composer using the method described at https://getcomposer.org/download/ (TODO consider whether this is really necessary - we could remove from this image)
-
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
-  && php -r "if (hash_file('SHA384', 'composer-setup.php') === '93b54496392c062774670ac18b134c3b3a95e5a5e5c8f1a9f115f203b75bf9a129d5daa8ba6a13e2cc8a1da0806388a8') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" \
-  && php composer-setup.php --install-dir=/usr/local/bin --filename=composer\
-  && php -r "unlink('composer-setup.php');"
+RUN EXPECTED_SIGNATURE="$(curl https://composer.github.io/installer.sig)" \
+  && php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
+  && ACTUAL_SIGNATURE="$(php -r "echo hash_file('sha384', 'composer-setup.php');")" \
+  && if [ "$EXPECTED_SIGNATURE" != "${ACTUAL_SIGNATURE}" ]; then >&2 echo 'ERROR: Invalid installer signature'; rm composer-setup.php; exit 1; fi \
+  && php composer-setup.php --install-dir=/usr/local/bin --filename=composer \
+  && rm composer-setup.php
 
 # Create civicrm user
 
