--- a/compose-examples/drupal/docker-compose.prod.yml
+++ b/compose-examples/drupal/docker-compose.prod.yml
@@ -1,9 +1,10 @@
-version: '3.4'
+version: "3.4"
 services:
   civicrm:
     image: michaelmcandrew/civicrm-drupal
     hostname: $PROJECT_NAME
-    environment: 
+    environment:
+      - APACHE_RUN_USER=civicrm
       - PROJECT_NAME
       - BASE_URL
       - CIVICRM_DB_NAME
