copy docker-style settings files as part of init

--- a/drupal/Dockerfile
+++ b/drupal/Dockerfile
@@ -12,10 +12,6 @@ RUN cgr drush/drush:~8
 
 RUN drush dl drupal-7 --destination=/var/www --drupal-project-rename=html -y
 
-COPY --chown=civicrm:civicrm ./settings.php /var/www/html/sites/default
-
-COPY --chown=civicrm:civicrm ./civicrm.settings.php /var/www/html/sites/default
-
 RUN mkdir /var/www/html/sites/default/files
 
 RUN cd /var/www/html/sites/all/modules \
@@ -30,4 +26,11 @@ RUN cd /var/www/html/sites/all/modules \
 
 USER root
 
+RUN mkdir /usr/local/etc/civicrm
+
 COPY ./init ./dump /usr/local/bin/
+
+COPY --chown=civicrm:civicrm ./settings.php /usr/local/etc/civicrm
+
+COPY --chown=civicrm:civicrm ./civicrm.settings.php /usr/local/etc/civicrm
+
