removing mcrypt from 7.2 and 7.3

--- a/5/backdrop/5.6/Dockerfile
+++ b/5/backdrop/5.6/Dockerfile
@@ -39,7 +39,7 @@ RUN apt-get update \
 # * imap
 # * intl
 # * json (already enabled)
-# * mbstring (already enabled)w
+# * mbstring (already enabled)
 # * mcrypt
 # * mysqli
 # * openssl (already enabled)
