--- a/5/drupal/7.1/Dockerfile
+++ b/5/drupal/7.1/Dockerfile
@@ -39,7 +39,7 @@ RUN apt-get update \
 # * imap
 # * intl
 # * json (already enabled)
-# * mbstring (already enabled)w
+# * mbstring (already enabled)
 # * mcrypt
 # * mysqli
 # * openssl (already enabled)
