--- a/5/drupal/7.3/Dockerfile
+++ b/5/drupal/7.3/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get update \
   libmagickwand-dev \
   libpng-dev \
   libxml2-dev \
+  libzip-dev \
   msmtp-mta \
   mysql-client \
   unzip \
