--- a/5/wordpress/7.1/Dockerfile
+++ b/5/wordpress/7.1/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update \
   libmcrypt-dev \
   libpng-dev \
   libxml2-dev \
+  libzip-dev \
   msmtp-mta \
   mysql-client \
   unzip \
