--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -126,9 +126,11 @@ COPY ./civicrm-docker-load /usr/local/bin
 
 COPY ./civicrm_dump.php /usr/local/src/civicrm_dump.php
 
-COPY ./docker-civicrm-entrypoint /usr/local/bin
+COPY ./civicrm-docker-entrypoint ./civicrm-docker-init ./civicrm-docker-dump ./civicrm-docker-install /usr/local/bin/
 
-ENTRYPOINT [ "docker-civicrm-entrypoint" ]
+RUN mkdir /usr/local/etc/civicrm
+
+ENTRYPOINT [ "civicrm-docker-entrypoint" ]
 
 CMD ["apache2-foreground"]
 
