--- a/5/drupal/php5.6/Dockerfile
+++ b/5/drupal/php5.6/Dockerfile
@@ -125,9 +125,11 @@ COPY ./civicrm-docker-load /usr/local/bin
 
 COPY ./civicrm_dump.php /usr/local/src/civicrm_dump.php
 
-COPY ./docker-civicrm-entrypoint /usr/local/bin
+COPY ./civicrm-docker-entrypoint ./civicrm-docker-init ./civicrm-docker-dump ./civicrm-docker-install /usr/local/bin/
 
-ENTRYPOINT [ "docker-civicrm-entrypoint" ]
+RUN mkdir /usr/local/etc/civicrm
+
+ENTRYPOINT [ "civicrm-docker-entrypoint" ]
 
 CMD ["apache2-foreground"]
 
@@ -154,10 +156,6 @@ RUN cd /var/www/html/sites/all/modules \
     && rm civicrm-l10n.tar.gz
 
 USER root
-
-RUN mkdir /usr/local/etc/civicrm
-
-COPY ./civicrm-docker-init ./civicrm-docker-dump /usr/local/bin/
 
 COPY --chown=civicrm:civicrm ./settings.php /usr/local/etc/civicrm
 
