--- a/docker-compose/drupal/docker-compose.dev.dist.yml
+++ b/docker-compose/drupal/docker-compose.dev.dist.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   civicrm:
-    image: michaelmcandrew/civicrm-drupal
+    image: michaelmcandrew/civicrm:drupal
     hostname: $PROJECT_NAME
     environment:
       - APACHE_RUN_USER=civicrm
@@ -24,7 +24,7 @@ services:
     ports:
       - NNNN:80
     volumes:
-      - ./src:/var/www/html
+      # - ./src:/var/www/html # uncomment for a mono-repo mounted from the host
       - files:/var/www/html/sites/default/files
       - ./state:/state
       - ./.bash_history:/home/civicrm/.bash_history
