--- a/docker-compose/drupal/docker-compose.prod.dist.yml
+++ b/docker-compose/drupal/docker-compose.prod.dist.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   civicrm:
-    image: michaelmcandrew/civicrm-drupal
+    image: michaelmcandrew/civicrm:drupal
     hostname: $PROJECT_NAME
     environment:
       - APACHE_RUN_USER=civicrm
