--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,5 +1,5 @@
+# Keep this in sync with https://docs.civicrm.org/sysadmin/en/latest/requirements/#mysql
+
 [mysqld]
+sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
 max_allowed_packet=128M
-innodb_large_prefix=true
-innodb_file_format=barracuda
-innodb_file_per_table=true
