--- a/docker-compose/wordpress/docker-compose.dev.dist.yml
+++ b/docker-compose/wordpress/docker-compose.dev.dist.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.4"
 services:
   civicrm:
     image: michaelmcandrew/civicrm-wordpress
@@ -16,7 +16,6 @@ services:
       - WORDPRESS_DB_PASS
       - WORDPRESS_DB_HOST
       - WORDPRESS_DB_PORT
-      - MYSQL_ROOT_PASSWORD
       - SMTP_HOST
       - SMTP_MAILDOMAIN
       - DEBUG=ON
@@ -24,22 +23,14 @@ services:
       - NNNN:80
     restart: always
     volumes:
-      - uploads:/var/www/html/wp-content/uploads 
+      - uploads:/var/www/html/wp-content/uploads
       - ./.bash_history:/home/civicrm/.bash_history
       - ./state:/state
       - ./src:/var/www/html
-  mysql:
-    image: michaelmcandrew/civicrm-mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD
-    volumes:
-      - mysql:/var/lib/mysql
-    restart: always
   maildev:
     image: djfarrelly/maildev
     restart: always
     ports:
-     - NNNN:80
+      - NNNN:80
 volumes:
-  mysql:
   uploads:
