--- a/docker-compose/drupal/docker-compose.prod.dist.yml
+++ b/docker-compose/drupal/docker-compose.prod.dist.yml
@@ -1,24 +1,22 @@
-version: "3.4"
+version: "3.6"
 services:
   civicrm:
     image: michaelmcandrew/civicrm:drupal
-    hostname: $PROJECT_NAME
+    hostname: example
     environment:
-      - APACHE_RUN_USER=civicrm
-      - PROJECT_NAME
-      - BASE_URL
-      - CIVICRM_DB_NAME
-      - CIVICRM_DB_USER
+      - PROJECT_NAME=example
+      - BASE_URL=https://example.org
+      - CIVICRM_DB_NAME=example_civicrm
+      - CIVICRM_DB_USER=example
       - CIVICRM_DB_PASS
-      - CIVICRM_DB_HOST
-      - CIVICRM_DB_PORT
-      - DRUPAL_DB_NAME
-      - DRUPAL_DB_USER
+      - CIVICRM_DB_HOST=mysql.example.org
+      - CIVICRM_DB_PORT=3306
+      - DRUPAL_DB_NAME=example_drupal
+      - DRUPAL_DB_USER=example
       - DRUPAL_DB_PASS
-      - DRUPAL_DB_HOST
-      - DRUPAL_DB_PORT
-    ports:
-      - NNNN:80
+      - DRUPAL_DB_HOST=mysql.example.org
+      - DRUPAL_DB_PORT=3306
+      - PHP_DATE_TIMEZONE="UTC"
     volumes:
       - files:/var/www/html/sites/default/files
       - ./state:/state
