--- a/5/drupal/php5.6/Dockerfile
+++ b/5/drupal/php5.6/Dockerfile
@@ -26,7 +26,7 @@ RUN apt-get update \
   libxml2-dev \
   libzip-dev \
   msmtp-mta \
-  mysql-client \
+  mariadb-client \
   unzip \
   wget \
   && rm -r /var/lib/apt/lists/*
