--- a/docker-compose/drupal/docker-compose.dev.dist.yml
+++ b/docker-compose/drupal/docker-compose.dev.dist.yml
@@ -22,7 +22,7 @@ services:
       - SMTP_HOST
       - SMTP_MAILDOMAIN
     volumes:
-      - files:/var/www/html/sites/default/files
+      - ./files:/var/www/html/sites/default/files
       - ./state:/state
       - ./.bash_history:/home/civicrm/.bash_history
     restart: always
