reference wp table prefix in dist env file

--- a/docker-compose/wordpress/dev.dist.env
+++ b/docker-compose/wordpress/dev.dist.env
@@ -1,5 +1,4 @@
 PROJECT_NAME=example
-BASE_URL=http://localhost:NNNN
 
 CIVICRM_DB_NAME=civicrm
 CIVICRM_DB_USER=civicrm
@@ -12,6 +11,7 @@ WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_PASS=xxx
 WORDPRESS_DB_HOST=mysql
 WORDPRESS_DB_PORT=3306
+# WORDPRESS_TABLE_PREFIX
 
 CIVICRM_SITE_KEY=xxxxxx
 
