--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,8 +1,17 @@
 # Keep this in sync with https://docs.civicrm.org/sysadmin/en/latest/requirements/#mysql
 
 [mysqld]
+# Remove ONLY_FULL_GROUP_BY as per https://docs.civicrm.org/sysadmin/en/latest/requirements/#mysql-configuration
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+
+# Handle big blobs in the database
 max_allowed_packet=128M
-character-set-client-handshake=OFF
+
+# Set utf8mb4 as per https://docs.civicrm.org/sysadmin/en/latest/requirements/#mysql-configuration
 character-set-server=utf8mb4
 collation-server=utf8mb4_unicode_ci
+
+# Use the default server character set, ignore the client character set
+character-set-client-handshake=OFF
+
+
