--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,5 +1,16 @@
 # Keep this in sync with https://docs.civicrm.org/sysadmin/en/latest/requirements/#mysql
 
 [mysqld]
-sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
 max_allowed_packet=128M
+
+# Drop NO_AUTO_CREATE_USER on versions >= 8.0.11
+sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+
+# Default method from MySQL 8 is caching_sha2_password, but PHP 7.3 default library does not support it yet
+# https://mysqlserverteam.com/upgrading-to-mysql-8-0-default-authentication-plugin-considerations/
+default-authentication-plugin=mysql_native_password
+
+# Allows Wordpress and CiviCRM to create triggers overriding the safety checks,
+# probably because they are using legacy syntax?
+# https://dev.mysql.com/doc/refman/8.0/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators
+log_bin_trust_function_creators=1
