imagemagick command line tools

--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -14,6 +14,7 @@ FROM php:{{ php }}-apache
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
+  imagemagick \
   iproute2 \
   less \
   libc-client-dev \
