--- a/5/backdrop/php7.0/Dockerfile
+++ b/5/backdrop/php7.0/Dockerfile
@@ -14,6 +14,7 @@ FROM php:7.0-apache
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
+  imagemagick \
   iproute2 \
   less \
   libc-client-dev \
@@ -149,12 +150,12 @@ RUN cd /var/www \
     && drush dlb backdrop --path="html"
 
 RUN cd /var/www/html/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.30.0-backdrop.tar.gz > civicrm-backdrop.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.30.1-backdrop.tar.gz > civicrm-backdrop.tar.gz \
     && tar xzf civicrm-backdrop.tar.gz \
     && rm civicrm-backdrop.tar.gz
 
 RUN cd /var/www/html/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.30.0-l10n.tar.gz > civicrm-l10n.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.30.1-l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
