--- a/5/drupal/php7.3/Dockerfile
+++ b/5/drupal/php7.3/Dockerfile
@@ -13,6 +13,7 @@ FROM php:7.3-apache
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
+  imagemagick \
   iproute2 \
   less \
   libc-client-dev \
@@ -139,12 +140,12 @@ RUN drush dl drupal-7 --destination=/var/www --drupal-project-rename=html -y
 RUN mkdir /var/www/html/sites/default/files
 
 RUN cd /var/www/html/sites/all/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.30.0-drupal.tar.gz > civicrm-drupal.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.30.1-drupal.tar.gz > civicrm-drupal.tar.gz \
     && tar xzf civicrm-drupal.tar.gz \
     && rm civicrm-drupal.tar.gz
 
 RUN cd /var/www/html/sites/all/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.30.0-l10n.tar.gz > civicrm-l10n.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.30.1-l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
