--- a/5/wordpress/php7.0/Dockerfile
+++ b/5/wordpress/php7.0/Dockerfile
@@ -14,6 +14,7 @@ FROM php:7.0-apache
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
+  imagemagick \
   iproute2 \
   less \
   libc-client-dev \
@@ -144,12 +145,12 @@ RUN wp core download
 RUN mkdir /var/www/html/wp-content/uploads
 
 RUN cd /var/www/html/wp-content/plugins \
-    && curl -L https://download.civicrm.org/civicrm-5.30.0-wordpress.zip > civicrm-wordpress.zip \
+    && curl -L https://download.civicrm.org/civicrm-5.30.1-wordpress.zip > civicrm-wordpress.zip \
     && unzip civicrm-wordpress.zip \
     && rm civicrm-wordpress.zip
 
 RUN cd /var/www/html/wp-content/plugins \
-    && curl -L https://download.civicrm.org/civicrm-5.30.0-l10n.tar.gz > civicrm-l10n.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.30.1-l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
