Auto-updating generated files

--- a/5/backdrop/php7.3/Dockerfile
+++ b/5/backdrop/php7.3/Dockerfile
@@ -166,3 +166,11 @@ RUN mkdir -p /var/www/config/active \
 COPY --chown=civicrm:civicrm ./settings.php /usr/local/etc/civicrm
 
 COPY --chown=civicrm:civicrm ./civicrm.settings.php /usr/local/etc/civicrm
+
+
+# Configure mysqldump
+
+COPY ./.my.cnf /home/civicrm/.my.cnf
+
+[mysqldump]
+max_allowed_packet=1024M
