--- a/5/wordpress/php7.3/Dockerfile
+++ b/5/wordpress/php7.3/Dockerfile
@@ -159,3 +159,10 @@ COPY --chown=civicrm:civicrm ./wp-config.php /usr/local/etc/civicrm
 COPY --chown=civicrm:civicrm ./civicrm.settings.php /usr/local/etc/civicrm
 
 COPY --chown=civicrm:civicrm ./.htaccess /usr/local/etc/civicrm
+
+# Configure mysqldump
+
+COPY ./.my.cnf /home/civicrm/.my.cnf
+
+[mysqldump]
+max_allowed_packet=1024M
