--- a/wordpress/php7.3/Dockerfile
+++ b/wordpress/php7.3/Dockerfile
@@ -127,31 +127,26 @@ ENTRYPOINT [ "civicrm-docker-entrypoint" ]
 
 CMD ["apache2-foreground"]
 
-ENV CIVICRM_UF=Backdrop
+ENV CIVICRM_UF=WordPress
+
+ARG CIVICRM_VERSION
+
+RUN curl https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -o /usr/local/bin/wp \
+    && chmod +x /usr/local/bin/wp
 
 USER civicrm
 
-ENV PATH="/home/civicrm/.composer/vendor/bin:${PATH}"
+RUN wp core download
 
-RUN cgr drush/drush:~8
+RUN mkdir /var/www/html/wp-content/uploads
 
-RUN mkdir -p /home/civicrm/.drush/commands \
-    && cd /home/civicrm/.drush/commands \
-    && curl -L https://github.com/backdrop-contrib/drush/releases/download/0.1.0/drush.zip > drush.zip \
-    && unzip drush.zip -d backdrop \
-    && rm drush.zip
+RUN cd /var/www/html/wp-content/plugins \
+    && curl -L https://download.civicrm.org/civicrm--wordpress.zip > civicrm-wordpress.zip \
+    && unzip civicrm-wordpress.zip \
+    && rm civicrm-wordpress.zip
 
-RUN cd /var/www \
-    && rmdir html \
-    && drush dlb backdrop --path="html"
-
-RUN cd /var/www/html/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.32.2-backdrop.tar.gz > civicrm-backdrop.tar.gz \
-    && tar xzf civicrm-backdrop.tar.gz \
-    && rm civicrm-backdrop.tar.gz
-
-RUN cd /var/www/html/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.32.2-l10n.tar.gz > civicrm-l10n.tar.gz \
+RUN cd /var/www/html/wp-content/plugins \
+    && curl -L https://download.civicrm.org/civicrm--l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
@@ -159,14 +154,11 @@ USER root
 
 COPY ./civicrm-docker-entrypoint ./civicrm-docker-init ./civicrm-docker-dump ./civicrm-docker-install /usr/local/bin/
 
-RUN mkdir -p /var/www/config/active \
-    && mkdir -p /var/www/config/staging \
-    && chown civicrm:civicrm /var/www/config/*
-
-COPY --chown=civicrm:civicrm ./settings.php /usr/local/etc/civicrm
+COPY --chown=civicrm:civicrm ./wp-config.php /usr/local/etc/civicrm
 
 COPY --chown=civicrm:civicrm ./civicrm.settings.php /usr/local/etc/civicrm
 
+COPY --chown=civicrm:civicrm ./.htaccess /usr/local/etc/civicrm
 
 # Configure mysqldump
 
